Update exim password template; change email provider

--- a/roles/exim/config/templates/passwd.client.j2
+++ b/roles/exim/config/templates/passwd.client.j2
@@ -1,2 +1,1 @@
-*.google.com:{{ eximAccountEmail }}:{{ eximAccountPassword }}
-*.gmail.com:{{ eximAccountEmail }}:{{ eximAccountPassword }}
+mail.infomaniak.com:{{ eximAccountEmail }}:{{ eximAccountPassword }}
